test/files/parser/errors/call-input-format.otest
name = "Call with improper input format"
line = 2
character = 12
error = 'Expected ":" after input name, but received ")".'

---

sine(volume)
